--- a/src/index.css
+++ b/src/index.css
@@ -177,12 +177,14 @@ body {
 }
 
 .app{
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  height: 100vh;
 }
 
 .dash-container{
-  width: 100%;
+  height: 100vh;
+  background-color: blanchedalmond;
+  
 }
 
 
@@ -202,4 +204,10 @@ body {
   background: none;
   border: none;
   color: blue;
+}
+
+.check {
+  display: flex;
+  justify-content: space-around;
+  width: 10vw;
 }
