--- a/src/index.css
+++ b/src/index.css
@@ -376,6 +376,15 @@ tr {
   gap: 0.1em;
 }
 
+.table_exam {
+  font-size: 1rem;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  color: var(--TABLE-COLOR);
+  gap: 0.1em;
+}
+
 .table__button {
   padding: 0.25em;
   font-size: 1.5rem;
