--- a/src/index.css
+++ b/src/index.css
@@ -384,6 +384,14 @@ tr {
   color: var(--TABLE-COLOR);
   gap: 0.1em;
 }
+.table_courses{
+  font-size: 1rem;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  color: var(--TABLE-COLOR);
+  gap: 0.1em;
+}
 
 .table__button {
   padding: 0.25em;
