--- a/src/index.css
+++ b/src/index.css
@@ -519,3 +519,30 @@ tr {
 .create_form{
   width: 70vw;
 }
+
+.class_container {
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+}
+.input-container {
+	display: flex;
+	flex-direction: column;
+	gap: 3px;
+}
+.dropdown {
+	width: 10rem;
+}
+
+.input-container input,
+.input-container select {
+	width: 100%;
+	border-radius: 5px;
+	background-color: #a7a8b2;
+	color: #080808;
+}
+.radio-container {
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+}
