--- a/src/index.css
+++ b/src/index.css
@@ -133,12 +133,20 @@ body {
 }
 
 .logo {
-    box-shadow: 0 4px 8px rgba(51, 125, 223, 0.1); /* Add shadow */
+    box-shadow: 0 4px 8px rgba(47, 122, 221, 0.425); /* Add shadow */
     transition: box-shadow 0.3s ease; /* Add transition for smooth effect */
+    background-color: white;
+    z-index: 1;
 }
 
 .logo:hover {
-    box-shadow: 0 8px 16px rgba(3, 64, 177, 0.2); /* Increase shadow on hover */
+    box-shadow: 0 8px 16px rgba(3, 64, 177, 0.486); /* Increase shadow on hover */
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .home_header{
@@ -146,17 +154,17 @@ body {
   position: sticky;
   top: 0;
   z-index: 1;
-  background-color: var(--BGCOLOR);
-  padding: 0 0.5em;
+  background-color: rgba(169, 169, 223, 0.548);
   border-bottom: 1px solid var(--BORDER-COLOR);
+  padding: 1.2rem;
 }
 
 .home_header_container{
-  padding: 1rem ;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+  background-color: transparent;
 }
 
 
@@ -174,11 +182,206 @@ body {
   border-top: 1px solid var(--BORDER-COLOR);
 }
 
-.second_header{
-  /* background-image: url("./images/Home_h2_cover.png"); */
-  background-size: cover;
-  min-height: 50vh;
+.portalBtn{
+  background-color: #00b34b;
+  color: white;
+  padding: 1rem;
+  height: 50px;
+  width: 150px;
+  font-size: 1.5rem;
+  border-radius: 1rem;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease-in-out;
 }
+
+.portalBtn:hover {
+  background-color: #0056b3;
+}
+ /* =================================home page css start============================================  */
+.second_header{
+  position: relative;
+  background-image: url("assets/images/background.jpg");
+  background-size: cover;
+  height: 50vh;
+  z-index: -1;
+}
+
+
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.89); /* Adjust the color and opacity of the overlay */
+  z-index: 0;
+}
+
+.content {
+  position: relative;
+  z-index: 1;
+}
+
+.home-image{
+  width: 30vw;
+  height: 40vh;
+  object-fit:fill;
+  margin-right: 15vw;
+
+}
+
+/* mission tile styles */
+.mission_container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.mission_tile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 15vw; /* Adjust width as needed */
+  height: 200px; /* Adjust height as needed */
+  padding: 20px;
+  border: 1px solid #ccc; /* Border for the tile */
+  border-radius: 10px; /* Rounded corners */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow for a nice effect */
+  background-color: #fff; /* Background color */
+  color: blue;
+  text-align: center; /* Center align the text */
+  margin: 10px; /* Space between tiles */
+}
+
+.mission_tile-icon {
+  margin-bottom: 10px; /* Space between the icon and the title */
+  font-size: 4rem;
+}
+
+.mission_tile-title {
+  font-size: 2rem; /* Font size for the title */
+  font-weight: bold; /* Bold text for the title */
+  color: #333; /* Text color */
+}
+
+.section_intro_head{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  width: 40vw;
+}
+
+.section_intro_head_line{
+  width: 10vw;
+  height: 0.5rem;
+  background-color: blue;
+  border: none;
+  border-radius: 0.5rem;
+}
+
+.section_sub_container{
+  width: 35vw;
+}
+
+.paragraph{
+  text-align: justify;
+  font-size: 1.5rem;
+}
+
+/* objective tile */
+.objective_tile {
+  border: 2px solid #007BFF; /* Blue border */
+  border-radius: 8px; /* Rounded corners */
+  padding: 20px;
+  margin: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.objective_tile-number {
+  background-color: #007BFF; /* Blue background for the number */
+  color: #fff;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 8px 0 0 8px; /* Rounded corners on the left */
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.objective_tile-content {
+  color: #000; /* Black text */
+}
+
+.objective_tile-title {
+  color: #007BFF; /* Blue title */
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.objective_tile-description {
+  color: #000; /* Black text */
+}
+
+/* profile tile css  */
+.profile-tile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.profile-content {
+  text-align: center;
+  margin: 0 20px;
+}
+
+.profile-image {
+  width: 20vw;
+  height: 20vhx;
+  border-radius: 50%;
+  border: 5px solid #4CAF50; /* Green border */
+}
+
+.profile-name {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.profile-position {
+  font-size: 1.5rem;
+  color: #4CAF50; /* Green text */
+}
+
+.arrow {
+  font-size: 30px;
+  color: #4CAF50; /* Green arrows */
+  cursor: pointer;
+}
+
+.left-arrow {
+  margin-right: 20px;
+}
+
+.right-arrow {
+  margin-left: 20px;
+}
+
+
+/* =================================home page css end============================================  */
 
 .login_page{
   height: 80vh;
@@ -352,6 +555,15 @@ nav .ul-item li:hover{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.gap{
+  gap: 1rem;
+}
+
+.home_h1{
+  font-size: 3rem;
+  color: rgb(252, 80, 0);
 }
 
 .dash_header{
