--- a/src/index.css
+++ b/src/index.css
@@ -1018,6 +1018,14 @@ hr{
   background-color: #0056b3;
 }
 
+.delete-button{
+  background-color: rgb(187, 46, 46);
+}
+
+.delete-button:hover{
+  background-color: red;
+}
+
 /*========================================== Paper Tile ======================= */
 .paper_tile {
   display: flex;
@@ -1393,3 +1401,32 @@ hr{
 }
 
 /* =====================================stats charts css end============================ */
+
+/* =================================achievement styles start-------------------------------- */
+.achievement-tile {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border: 2px solid #4CAF50; /* Green border */
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+}
+
+.achievement-icon {
+  font-size: 40px;
+  margin-right: 10px;
+  color: #4CAF50; /* Green icon */
+}
+
+.achievement-text {
+  font-size: 18px;
+  color: #333;
+}
+
+.achievement-number {
+  font-weight: bold;
+  color: #4CAF50; /* Green number */
+}
+/* =================================achievement styles start-------------------------------- */
