--- a/src/index.css
+++ b/src/index.css
@@ -598,7 +598,7 @@ nav .ul-item li a {
   text-decoration: none;
   text-transform: uppercase;
   border-left: 1px solid slategray;
-  padding: .3rem;
+  padding: 0.3rem;
 }
 
 .menu-icon {
@@ -1458,6 +1458,16 @@ hr{
   font-weight: bold;
 }
 
+.general_stats_container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
 /* =====================================stats charts css end============================ */
 
 /* =================================achievement styles start-------------------------------- */
@@ -1600,13 +1610,13 @@ hr{
   }
 
   .home-image{
-    width: 150px;
-    height: 150px;
     margin-right: 0;
+    width: 100px;
+    height: 100px;
   }
-  
+
   .home_h1{
-    font-size: 1.1rem;
+    font-size: 0.9rem;
   }
 
   h2{
@@ -1665,6 +1675,41 @@ hr{
 
   .check{
     width: 35vw;
+  }
+
+  /*================================= dash sidebar and dash header ==========================================*/
+  .header-email{
+    font-size: 0.8rem;
+  }
+  .sidebar{
+    width: 21vw;
+  }
+
+  .sidebar-mobile{
+    width: 7vw;
+  }
+
+  nav .ul-item li {
+    gap: 0.2rem;
+    padding-block: 1rem;
+  }
+
+  nav .ul-item li .icon {
+    margin-inline: 0.2rem;
+    font-size: 15px;
+  }
+  
+  nav .ul-item li a {
+    padding: 0.1rem;
+    font-size: 0.4rem;
+  }
+  
+  .menu-icon {
+    margin-inline: 0.3rem;
+  }
+  
+  .menu-icon .menu {
+    font-size: 15px;
   }
 }
 
@@ -1738,6 +1783,38 @@ hr{
   .check{
     width: 27vw;
   }
+
+  /*================================= dash sidebar and dash header ==========================================*/
+  .sidebar{
+    width: 23vw;
+  }
+
+  .sidebar-mobile{
+    width: 7vw;
+  }
+
+  nav .ul-item li {
+    gap: 0.6rem;
+    padding-block: 1rem;
+  }
+
+  nav .ul-item li .icon {
+    margin-inline: 0.3rem;
+    font-size: 18px;
+  }
+  
+  nav .ul-item li a {
+    padding: 0.2rem;
+    font-size: 0.6rem;
+  }
+  
+  .menu-icon {
+    margin-inline: 0.6rem;
+  }
+  
+  .menu-icon .menu {
+    font-size: 18px;
+  }
 }
 
 /* Small Devices (Tablets) */
@@ -1809,6 +1886,38 @@ hr{
   .check{
     width: 20vw;
   }
+
+  /*================================= dash sidebar and dash header ==========================================*/
+  .sidebar{
+    width: 20vw;
+  }
+
+  .sidebar-mobile{
+    width: 6vw;
+  }
+
+  nav .ul-item li {
+    gap: 0.6rem;
+    padding-block: 1rem;
+  }
+
+  nav .ul-item li .icon {
+    margin-inline: 0.5rem;
+    font-size: 20px;
+  }
+  
+  nav .ul-item li a {
+    padding: 0.2rem;
+    font-size: 0.7rem;
+  }
+  
+  .menu-icon {
+    margin-inline: 0.6rem;
+  }
+  
+  .menu-icon .menu {
+    font-size: 20px;
+  }
 }
 
 /* Medium Devices (Small Laptops) */
@@ -1862,6 +1971,38 @@ hr{
 
   .check{
     width: 20vw;
+  }
+
+  /*================================= dash sidebar and dash header ==========================================*/
+  .sidebar{
+    width: 19vw;
+  }
+
+  .sidebar-mobile{
+    width: 6vw;
+  }
+
+  nav .ul-item li {
+    gap: 1rem;
+    padding-block: 1rem;
+  }
+
+  nav .ul-item li .icon {
+    margin-inline: 0.5rem;
+    font-size: 22px;
+  }
+  
+  nav .ul-item li a {
+    padding: 0.3rem;
+    font-size: 0.8rem;
+  }
+  
+  .menu-icon {
+    margin-inline: 0.6rem;
+  }
+  
+  .menu-icon .menu {
+    font-size: 22px;
   }
 }
 
@@ -1917,6 +2058,38 @@ hr{
   .check{
     width: 15vw;
   }
+
+  /*================================= dash sidebar and dash header ==========================================*/
+  .sidebar{
+    width: 17vw;
+  }
+
+  .sidebar-mobile{
+    width: 5vw;
+  }
+
+  nav .ul-item li {
+    gap: 1rem;
+    padding-block: 1rem;
+  }
+
+  nav .ul-item li .icon {
+    margin-inline: 0.5rem;
+    font-size: 22px;
+  }
+  
+  nav .ul-item li a {
+    padding: 0.3rem;
+    font-size: 0.8rem;
+  }
+  
+  .menu-icon {
+    margin-inline: 0.6rem;
+  }
+  
+  .menu-icon .menu {
+    font-size: 22px;
+  }
 }
 
 /* Extra Large Devices (Large Desktops) */
@@ -1945,18 +2118,30 @@ hr{
   .mission_tile-title{
     font-size: 2rem;
   }
-}
 
-
-
-/* media queries for mobile devices screens  */
-@media (max-width: 390) {
-  /*=================================== css for home header screen ============================ */
-  .home-image{
-    margin-right: 0;
-    width: 100px;
-    height: 100px;
+  /*================================= dash sidebar and dash header ==========================================*/
+  
+  nav .ul-item li {
+    gap: 1rem;
+    padding-block: 1rem;
   }
 
+  nav .ul-item li .icon {
+    margin-inline: 0.5rem;
+    font-size: 22px;
+  }
   
+  nav .ul-item li a {
+    padding: 0.3rem;
+    font-size: 0.8rem;
+  }
+  
+  .menu-icon {
+    margin-inline: 0.6rem;
+  }
+  
+  .menu-icon .menu {
+    font-size: 22px;
+  }
 }
+
