--- a/src/index.css
+++ b/src/index.css
@@ -290,7 +290,7 @@ ul{
   z-index: 0;
 }
 
-.content {
+.home-content {
   position: relative;
   z-index: 1;
 }
@@ -1227,11 +1227,11 @@ hr{
 
 .sidebar-content {
   max-height: 100vh;
-  width: 60vw;
+  width: 100vw;
 }
 
 .open {
-  width: 60vw;
+  width: 100vw;
 }
 
 
@@ -1350,6 +1350,11 @@ hr{
 }
 
 .text{
+  line-height: 1.5rem;
+  font-size: 1rem;
+}
+
+.ai-text{
   line-height: 1.5rem;
   font-size: 1rem;
 }
@@ -1545,7 +1550,6 @@ hr{
 }
 
 
-
 @media (max-width: 991.98px) {
   /*=================================== css for home header screen ============================ */
   .header-nav {
@@ -1711,6 +1715,32 @@ hr{
   .menu-icon .menu {
     font-size: 15px;
   }
+
+  /* ========================================exams tile ================================*/
+  .exam-title{
+    font-size: 1.5rem;
+  }
+
+  .course-card{
+    width: 80vw;
+  }
+
+  .piechart{
+    width: 90vw;
+  }
+  .barchart{
+    width: 90vw;
+  }
+  /*=========================================== questions page ============================================= */
+  .text{
+    font-size: 0.4rem;
+  }
+
+  .content{
+    flex-direction: column;
+    height: 85vh;
+  }
+
 }
 
 @media (min-width: 500px) and (max-width: 700px) {
@@ -1815,6 +1845,21 @@ hr{
   .menu-icon .menu {
     font-size: 18px;
   }
+
+  .piechart{
+    width: 80vw;
+  }
+  .barchart{
+    width: 80vw;
+  }
+  /*=========================================== questions page ============================================= */
+  .text{
+    font-size: 0.5rem;
+  }
+
+  .content{
+    flex-direction: column;
+  }
 }
 
 /* Small Devices (Tablets) */
@@ -1918,6 +1963,22 @@ hr{
   .menu-icon .menu {
     font-size: 20px;
   }
+
+  .piechart{
+    width: 80vw;
+  }
+  .barchart{
+    width: 80vw;
+  }
+
+  /*=========================================== questions page ============================================= */
+  .text{
+    font-size: 0.8rem;
+  }
+
+  .content{
+    flex-direction: column;
+  }
 }
 
 /* Medium Devices (Small Laptops) */
@@ -2003,6 +2064,20 @@ hr{
   
   .menu-icon .menu {
     font-size: 22px;
+  }
+
+  /*=========================================== questions page ============================================= */
+  .text{
+    font-size: 1rem;
+  }
+
+  .content{
+    flex-direction: column;
+  }
+
+  /*======================================== AI sidebar ========================================*/
+  .ai-text{
+    font-size: 0.8rem;
   }
 }
 
@@ -2090,6 +2165,26 @@ hr{
   .menu-icon .menu {
     font-size: 22px;
   }
+  /*=========================================== questions page ============================================= */
+  .text{
+    font-size: 1rem;
+  }
+
+  .content{
+    flex-direction: column;
+  }
+  /*======================================== AI sidebar ========================================*/
+  .ai-text{
+    font-size: 0.8rem;
+  }
+
+  .AI_container_sidebar{
+    flex: 1;
+  }
+  
+  .main_AI{
+    flex: 9;
+  }
 }
 
 /* Extra Large Devices (Large Desktops) */
@@ -2143,5 +2238,13 @@ hr{
   .menu-icon .menu {
     font-size: 22px;
   }
+
+  /*=========================================== questions page ============================================= */
+  .text{
+    font-size: 0.8rem;
+  }
+
+  /*======================================== AI sidebar ========================================*/
+  
 }
 
